parameters are a dictionary, not a list.

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -5,5 +5,5 @@ jenkins_remotedeploy_job                :  "test-remote_trigger"
 jenkins_remotedeploy_force              :  false
 jenkins_remotedeploy_first_boot_file    :  "/var/local/jenkins_first_boot_file"
 jenkins_remotedeploy_parameters         :
-                                          - python_path :  "/opt"
-                                          - foo         : "parm"
+                                          python_path :  "/opt"
+                                          foo         : "parm"
